# urban-manual-co

./: .browserslistrc  .dockerignore  .env.example  .env.local.example  .env.local.template  .env.production.example  .gitignore  .supabase-commands.md  .vercelignore  ACCESSIBILITY_AUDIT.md  ACCESSIBILITY_IMPROVEMENTS.md  ADDITIONAL_CLEANUP.md  ADDITIONAL_ISSUES_NOT_IN_PROMPT.md  ADDITIONAL_TRENDING_APIS.md  ADMIN_BRUTAL_REDESIGN_PLAN.md  ADMIN_LOGS_SETUP.md  ADMIN_REDESIGN_WIREFRAME.md  ADMIN_USER_FLOW_IMPROVEMENTS.md  ADVENTURELOG_COMPARISON.md  ADVENTURELOG_RESEARCH_README.md  AI_INFRASTRUCTURE_AUDIT_REPORT.md  AI_INTEGRATION_AUDIT.md  AI_ML_AUDIT.md  AI_OPTIMIZATION_SUMMARY.md  ALGORITHMIC_FEED_ARCHITECTURE.md  ALGORITHM_IMPROVEMENT_PLAN.md  API_INTEGRATION_SUMMARY.md  APPLE_OAUTH_CHECKLIST.md  APPLE_OAUTH_SETUP.md  ARCHITECTURE_INTELLIGENCE_IMPLEMENTATION.md  ARCHITECTURE_SETUP_GUIDE.md  AUDIT_REPORT.md  AUTH_TESTING_PLAN.md  AUTORAG_SETUP_GUIDE.md  BACKEND_API_IMPLEMENTATION_STATUS.md  BROWSER_AUDIT_REPORT.md  BRUTAL_REDESIGN_PLAN.md  CATEGORY_ENRICHMENT_ANALYSIS.md  CATEGORY_ICONS_STATUS.md  CHAT_IMPROVEMENT_PLAN.md  (+247 more)
.Jules/: palette.md
.github/: README.md  dependabot.yml
.jules/: bolt.md  palette.md  sentinel.md
UrbanManual-iOS/: BACKEND_INTEGRATION.md  HOW_TO_RUN.md  IMPLEMENTATION_STATUS.md  Info.plist  PROJECT_SETUP.md  Package.swift  README.md  SETUP_GUIDE.md  setup.sh
ai-agents/: .env.example  README.md  package.json  tsconfig.json
app/: error.tsx  global-error.tsx  globals.css  home-page-client.tsx  layout.tsx  loading.tsx  my-statsig.tsx  not-found.tsx  page-client-new.tsx  page-client.tsx  page.client.tsx  page.tsx  proxy.ts  robots.ts  sitemap.ts
apps/: README.md
automation/: .env.example  docker-compose.yml
collections/: Destinations.ts  Media.ts
components/: AIAssistant.tsx  AIChatMessages.tsx  AIItineraryBuilder.tsx  AccountDrawer.tsx  AccountDrawerV2.tsx  AccountDropdown.tsx  AccountPrivacyManager.tsx  Achievements.tsx  AchievementsDisplay.tsx  ActivityFeed.tsx  AddLocationToTrip.tsx  AddPlaceDropdown.tsx  AddSavedPlaceDropdown.tsx  AddToTripModal.tsx  AdvancedFilter.tsx  AdvancedFilters.tsx  AnomalyAlert.tsx  AppShell.tsx  AppleMap.tsx  ArchitectDesignInfo.tsx  ArchitectHoverPill.tsx  ArchitectSpotlight.tsx  ArchitectTagInput.tsx  ArchitecturalJourney.tsx  ArchitectureMap.tsx  AvatarUpload.tsx  BestTimeToVisit.tsx  BookingLinks.tsx  BottomNav.tsx  BottomSheet.css  BottomSheet.tsx  BrandHoverBadge.tsx  Breadcrumb.tsx  CardStyles.ts  CategoryAutocompleteInput.tsx  CategoryCrossSell.tsx  ChatDrawer.tsx  ChatGPTStyleAI.tsx  ChatInterface.tsx  ChristmasEffects.tsx  (+181 more)
contexts/: AIContext.tsx  (+14 more)
ml-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.production  README.md  deploy-railway.sh  docker-compose.yml  fly.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  start-local.bat  start-local.sh
ml-service/app/: __init__.py  config.py  main.py
ml-service/app/api/: __init__.py  embeddings.py  forecast.py  google_trends.py  graph_sequencing.py  health.py  insights.py  optimization.py  recommendations.py  vector_search.py
ml-service/app/api/endpoints/: forecasting.py  recommendations.py
ml-service/app/contracts/: __init__.py  validators.py
ml-service/app/models/: __init__.py  anomaly_detection.py  bandit_algorithms.py  collaborative_filtering.py  content_based.py  demand_forecast.py  demand_forecasting.py  event_correlation.py  explainable_ai.py  graph_sequencing.py  sentiment.py  sequence_models.py  topic_modeling.py
ml-service/app/semantic_tags/: __init__.py  api.py  models.py
ml-service/app/services/: faiss_index.py  forecast_training.py
ml-service/app/utils/: __init__.py  data_fetcher.py  database.py  logger.py  model_registry.py  observability.py  performance.py  rust_acceleration.py
ml-service/tests/: conftest.py  test_anomaly_detection.py  test_demand_forecast.py  test_event_correlation.py  test_sentiment_model.py  test_sequence_endpoints.py  test_topic_modeling.py
rust-modules/: Cargo.toml  README.md  build.sh
rust-modules/embedding-processor/: Cargo.toml  pyproject.toml
rust-modules/embedding-processor/src/: lib.rs
rust-modules/vector-search/: Cargo.toml  pyproject.toml
rust-modules/vector-search/src/: lib.rs
(+3197 files in other folders)
