[project]
name = "urban-manual-ml-service"
version = "0.1.0"
description = "Machine Learning service for Urban Manual travel guide recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and web server
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    # Machine Learning
    "lightfm==1.17",
    "prophet==1.1.6",
    "scikit-learn==1.5.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",

    # Database
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.35",

    # HTTP client
    "httpx==0.27.2",

    # Data validation and serialization
    "python-multipart==0.0.12",

    # Logging and monitoring
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
