[package]
name = "embedding-processor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "embedding_processor"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
nalgebra.workspace = true

# Additional dependencies for embedding processing
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "embedding_benchmark"
harness = false
