[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "embedding-processor"
version = "0.1.0"
description = "High-performance embedding operations in Rust for Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
]

[tool.maturin]
python-source = "python"
module-name = "embedding_processor"
