[package]
name = "vector-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "vector_search"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

# Vector search specific dependencies
kiddo = "4.2"  # k-d tree for nearest neighbor search
ordered-float = "4.2"
priority-queue = "2.0"

[dev-dependencies]
criterion.workspace = true
rand = "0.8"

[[bench]]
name = "vector_search_benchmark"
harness = false
