[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vector-search"
version = "0.1.0"
description = "High-performance vector similarity search in Rust for Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
]

[tool.maturin]
python-source = "python"
module-name = "vector_search"
